--- a/src/main/java/de/mroedig/bidd/HomePage.html
+++ b/src/main/java/de/mroedig/bidd/HomePage.html
@@ -20,7 +20,7 @@
 		<h2>Accounts</h2>
 		<p>
 			Anyone can view this page, but posting to an Account requires <a
-				href="/login">login</a> and must be authorized. Below are some users
+				href="login">login</a> and must be authorized. Below are some users
 			to try posting to Accounts with.
 		</p>
 		<ul>
@@ -32,22 +32,27 @@
 
 		<div wicket:id="feedback" />
 
+		
+
+
 		<table>
 			<tr>
 				<th>ID</th>
-				<th>Holder</th>
-				<th>Balance</th>
-				<th>Overdraft</th>
-				<th>Operations</th>
+				<th>auktionsGegenstand</th>
+				<th>preisInCent</th>
+				<th>waehrung</th>
+				<th>startZeitpunkt</th>
+				<th>laufzeitInSekunden</th>
 			</tr>
-			<tr wicket:id="accountList">
-				<td wicket:id="id" />
-				<td wicket:id="holder" />
-				<td wicket:id="balance" />
-				<td wicket:id="overdraft" />
-				<td><a wicket:id="debit20Link">-$20</a> <a
-					wicket:id="debit5Link">-$5</a> <a wicket:id="credit5Link">+$5</a> <a
-					wicket:id="credit20Link">+$20</a></td>
+			<tr wicket:id="auctionList">
+				<td wicket:id="ident" />
+				<td wicket:id="auktionsGegenstand" />
+				<td wicket:id="preisInCent" />
+				<td wicket:id="waehrung" />
+				<td wicket:id="startZeitpunkt" />
+				<td wicket:id="laufzeitInSekunden" />
+
+
 			</tr>
 		</table>
 
