--- a/src/main/java/de/mroedig/bidd/LoginPage.html
+++ b/src/main/java/de/mroedig/bidd/LoginPage.html
@@ -12,8 +12,7 @@
 <body>
 	<div id="hd">
 		<div id="logo">
-			<img src="logo.png" width="50px" height="50px" alt="Wicket Logo" />
-			<h1>Wicket / Spring Security Integration</h1>
+			<h1>GameAuctions</h1>
 		</div>
 	</div>
 	<div id="bd">
