--- a/src/main/java/de/mroedig/bidd/HomePage.html
+++ b/src/main/java/de/mroedig/bidd/HomePage.html
@@ -49,6 +49,7 @@
 				<th>spiel</th>
 				<th>spielServer</th>
 				<th>besitzer</th>
+				<th>details</th>
 			</tr>
 			<tr wicket:id="auctionList">
 				<td wicket:id="ident" />
@@ -59,7 +60,8 @@
 				<td wicket:id="laufzeitInSekunden" />
 				<td wicket:id="spiel" />
 				<td wicket:id="spielServer" />
-				<td wicket:id="besitzer" /> 
+				<td wicket:id="besitzer" />
+				<td > <a href="#" wicket:id="details">more information</a> </td>  
 
 
 			</tr>
