--- a/src/main/java/de/mroedig/bidd/DetailSeite.html
+++ b/src/main/java/de/mroedig/bidd/DetailSeite.html
@@ -17,20 +17,20 @@
 		</div>
 	</div>
 	<div id="bd">
-		<h2>Accounts</h2>
+		<h2>Auktion</h2>
 		
 
 		<table>
 			<tr>
 				<th>ID</th>
-		 <th>auktionsGegenstand</th>
-				<th>preisInCent</th>
-				<th>waehrung</th>
-				<th>startZeitpunkt</th>
-				<th>laufzeitInSekunden</th>
-				<th>spiel</th>
-				<th>spielServer</th>
-				<th>besitzer</th>  
+		        <th>Auktions-Gegenstand</th>
+				<th>Preis in: </th>
+				<th>Währung</th>
+				<th>Start</th>
+				<th>Laufzeit in Sec</th>
+				<th>Spiel</th>
+				<th>SpielServer</th>
+				<th>Besitzer</th>  
 			</tr>
 			<tr>
 				<td wicket:id="ident"/>
