--- a/src/main/java/de/mroedig/bidd/HomePage.html
+++ b/src/main/java/de/mroedig/bidd/HomePage.html
@@ -13,11 +13,11 @@
 	<div id="hd">
 		<div id="logo">
 			<img src="logo.png" width="50px" height="50px" alt="Wicket Logo" />
-			<h1>Wicket / Spring Security Integration</h1>
+			<h1>GameAuctions</h1>
 		</div>
 	</div>
 	<div id="bd">
-		<h2>Accounts</h2>
+		<h2>Auctions</h2>
 		<p>
 			Anyone can view this page, but posting to an Account requires <a
 				href="login">login</a> and must be authorized. Below are some users
@@ -26,17 +26,11 @@
 			Bitte  <a
                 href="register">registrieren</a> 
 		</p>
-		<ul>
-			<li>rod/koala - can post to any Account</li>
-			<li>dianne/emu - can post to Accounts as long as the balance
-				remains above the overdraft amount</li>
-			<li>scott/wombat - cannot post to any Accounts</li>
-		</ul>
-
+		
 		<div wicket:id="feedback" />
 
-
-
+<div wicket:id="zeigDichA" />
+<div wicket:id="zeigDichN" />
 
 		<table>
 			<tr>
